fixed issue for better experience on mobile

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -1,5 +1,4 @@
-.container {
-    padding-top: 30px;    
+.container { 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,7 +6,8 @@
     text-align: center;
     height: 100dvh;
     min-height: 500px;
-    padding-right: 30px;
+    padding: 30px;
+    padding-top: 60px;
 
     .hero {
         max-width: 200px;
